# taskforest-protocol

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: publish-npm.yml
client/: .env.example  README.md  index.html  package-lock.json  package.json
client/public/: llms.txt
client/public/.well-known/: ai-plugin.json
client/src/: AgentDocs.css  AgentDocs.tsx  App.css  App.tsx  Board.css  Board.tsx  Grove.css  Grove.tsx  Hire.css  Hire.tsx  Landing.css  Landing.tsx  crypto.ts  index.css  main.tsx  pinata.ts
client/src/identity/: adapters.ts  types.ts
dark-forest/: README.md  package.json
dark-forest/src/: index.ts  verifier.ts
dark-forest/src/__tests__/: dark-forest.test.ts
docs/: agent-flows.md  agent_task_protocol.md  spec-centric-roadmap.md  spec-centric-taskforest.md  tokenomics.md
programs/dark-forest/: Cargo.toml
programs/dark-forest/src/: lib.rs
programs/taskforest/: Cargo.toml
programs/taskforest-payments/: Cargo.toml
programs/taskforest-payments/src/: constants.rs  errors.rs  lib.rs
programs/taskforest-payments/src/instructions/: compressed.rs  payment.rs
programs/taskforest-payments/src/state/: compressed.rs  mod.rs  payment.rs
programs/taskforest/src/: constants.rs  errors.rs  lib.rs
programs/taskforest/src/instructions/: bidding.rs  compressed.rs  credential.rs  delegation.rs  dispute.rs  job.rs  mod.rs  payment.rs  proof.rs  settlement.rs  tee.rs  ttd.rs
programs/taskforest/src/state/: compressed.rs  dispute.rs  job.rs  mod.rs  payment.rs  settlement.rs  ttd.rs  vault.rs
scripts/: deploy-devnet.sh  test-local.sh
sdk/: README.md  package.json  ttd-schema.json
sdk/sample-ttds/: code-review-v1.json  data-extraction-v1.json  text-summarization-v1.json
sdk/src/: dark-forest.ts  index.ts  privacy.ts  receipts.ts  taskforest.ts  types.ts
sdk/src/__tests__/: taskforest.test.ts
src/: bpf_entrypoint.rs  instruction.rs  lib.rs
tests/: compress-settlement.ts  e2e-devnet.ts  payments-er-devnet.ts  protocol_integration.rs  taskforest-payments.ts  taskforest.ts
worker/: package-lock.json  package.json  wrangler.toml
worker/src/: index.ts
