[package]
name = "taskforest-protocol"
version = "0.1.0"
edition = "2024"

[features]
default = []
bpf-entrypoint = ["dep:pinocchio", "dep:solana-address"]

[dependencies]
pinocchio = { version = "0.10.2", optional = true }
solana-address = { version = "2.0", optional = true, features = ["decode"] }
