[package]
name = "dark-forest"
version = "0.1.0"
description = "Dark Forest Payments — Private payment channels for AI agent work on MagicBlock PER"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dark_forest"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.8", features = ["anchor"] }
borsh = "0.10.0"
